Simplesurvey: datepicker, overlapping and overflowing issues in responsive version, fixed overwriting responses

--- a/frontend/simplesurvey/css/style.css
+++ b/frontend/simplesurvey/css/style.css
@@ -4,19 +4,19 @@
 /*---------------------------------------------------*/
 @font-face {
   font-family: Montserrat-Light;
-  src: url("fonts/Montserrat-Light.otf"); }
+  src: url("/static/fonts/Montserrat-Light.otf"); }
 @font-face {
   font-family: Montserrat-Hairline;
-  src: url("fonts/Montserrat-Hairline.otf"); }
+  src: url("/static/fonts/Montserrat-Hairline.otf"); }
 @font-face {
   font-family: Montserrat-Regular;
-  src: url("fonts/Montserrat-Regular.otf"); }
+  src: url("/static/fonts/Montserrat-Regular.otf"); }
 @font-face {
   font-family: Raleway-Light;
-  src: url("/static/css/fonts/Raleway-Light.ttf"); }
+  src: url("fonts/Raleway-Light.ttf"); }
 @font-face {
   font-family: Raleway-Regular;
-  src: url("/static/css/fonts/Raleway-Regular.ttf"); }
+  src: url("fonts/Raleway-Regular.ttf"); }
 /*---------------------------------------------------*/
 /*---------------------------------------------------*/
 *,
@@ -90,6 +90,9 @@ textarea {
   .sv-question {
     margin-left: 1em; }
 
+  .sv-question-subpart-header {
+    width: 250px !important; }
+
   .sv-rating-radio-group .ranking-mobile {
     display: block !important;
     margin: 4em 2em;
@@ -118,7 +121,52 @@ textarea {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    -webkit-tap-highlight-color: transparent; } }
+    -webkit-tap-highlight-color: transparent; }
+
+  /*---------------------------------------------------*/
+  /*---------------------------------------------------*/
+  .sv-final-page {
+    width: 100% !important;
+    height: 100% !important; }
+    .sv-final-page .final-slide-wrapper {
+      width: auto !important;
+      margin: 2em auto 0; }
+
+  .sv-surveyor-message {
+    font-size: 1.0em;
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    -webkit-transform: translate(0) !important;
+    -moz-transform: translate(0) !important;
+    -ms-transform: translate(0) !important;
+    -o-transform: translate(0) !important;
+    transform: translate(0) !important;
+    margin-bottom: 3em; }
+
+  .sv-final-footer {
+    position: relative !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    -webkit-transform: translateX(0) !important;
+    -moz-transform: translateX(0) !important;
+    -ms-transform: translateX(0) !important;
+    -o-transform: translateX(0) !important;
+    transform: translateX(0) !important; }
+    .sv-final-footer .sv-message {
+      margin-bottom: 3em;
+      font-size: 0.75em;
+      color: white; }
+
+  .sv-final-survaider-logo {
+    display: block; }
+    .sv-final-survaider-logo h3 {
+      font-size: 1em;
+      color: white; }
+    .sv-final-survaider-logo img {
+      max-width: 100%;
+      max-height: 100px;
+      margin-top: 1em; } }
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width: 321px) {
   /* STYLES GO HERE */ }
@@ -1605,7 +1653,7 @@ main {
 
 .pagination {
   position: fixed;
-  z-index: 100000;
+  z-index: 1001;
   width: 100px;
   height: 100%;
   top: 0;
@@ -1877,6 +1925,16 @@ main {
     margin: 2em 0;
     padding: 0 1em;
     color: white; }
+
+.short_text_date {
+  margin: 2em 1em;
+  display: block; }
+  .short_text_date input {
+    border: none;
+    padding: 1em 0.5em;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none; }
 
 .sv-question-description {
   font-size: 14px;
@@ -2297,7 +2355,7 @@ main {
   height: 12%;
   left: 50%;
   width: 60%;
-  z-index: 100000;
+  z-index: 1000;
   background-color: white;
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
@@ -2515,5 +2573,31 @@ main {
 
 .ranking-desktop-hide, .ranking-mobile-hide {
   display: none; }
+
+#sv-app-loading {
+  width: 100%;
+  height: 100%;
+  background-color: #60d7a9;
+  z-index: 2000;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: opacity 0.3s, visibility 0.3s;
+  -moz-transition: opacity 0.3s, visibility 0.3s;
+  transition: opacity 0.3s, visibility 0.3s; }
+  #sv-app-loading.hide {
+    opacity: 0;
+    visibility: hidden; }
+  #sv-app-loading h1 {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
 
 /*# sourceMappingURL=style.css.map */
